# see-and-tell

./: .gitignore  Dockerfile  LICENSE  README.md  cntell.py  examples.ipynb  exp.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dev_build.yaml  malevich_build.yaml
cntell/: __init__.py  log.py  pipeline.py  run.py  utils.py
cntell/cache/: local_fs.py  no_cache.py
cntell/common/: cms.py  component.py  functions.py
cntell/core/captions/: README.md  captions_improved.py  context.py  noun_phrases_detection.py
cntell/core/describe/: README.md  frame.py
cntell/core/face/: embeddings.py  face_recognition.py  who.py
cntell/core/listen/: speech.py
cntell/storage/: yandex.py
cntell/tests/: test_describe.py  test_listen.py  test_say.py
embeddings/: tbbt.json  tbbt_outdated.json
malevich/: .env  Dockerfile  devtool.json  run.py
malevich/apps/: choose.py  context.py  describe.py  faces.py  listen.py  mix.py  say.py  schema.py  slicer.py
malevich/auto/: build.sh  devtool.sh
malevich/schema/: audio.json  audio_arrays.json  captions.json  captions_indices.json  captions_timings.json  faces.json  filename.json  filename_s3key.json  segments.json  timings.json
src/: TBBT_embeddings_16.json  TBBT_embeddings_16_160_final.json  TBBT_embeddings_16_256.json  TBBT_embeddings_16_RGB.json  captions.p  cntell.py  examples.ipynb  exp.ipynb  log.py  pipeline.py  preds.p  utils.py
src/OSG/: OSG_VSD.py  OptimalSequentialGrouping.py  osg_vsd_dataset.py  osg_vsd_train.py
src/captions/: captions_improved.py  noun_phrases_detection.py
src/describe/: frame.py
src/experimental/: exp.py
src/face/: README.md  debug_face_recognition.py  embeddings.py  example_embeddings.py  example_face_recognition.py  face_recognition.py  helper_functions.py  utilities.py  who.py
src/face_old/: face_recognition.py  helper_functions.py
src/listen/: README.md  detect_speech.py  speech.py
src/say/: README.md  caption.py
src/tests/: test_image_description.py
(+10 files in other folders)
