[tool.poetry]
name = "cntell"
version = "0.0.1b"
description = "See and Tell: Describe Visual Content"
authors = ["Aleksandr Lobanov <aleksandr.lobanov.official@gmail.com>", "Ayhem Bouabid <a.bouabid@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.28.1"
torch = "^2.0.0"
pillow = "^9.5.0"
pytest = "^7.3.1"
pyannote-audio = {url = "https://github.com/pyannote/pyannote-audio/archive/refs/heads/develop.zip"}
datasets = "^2.12.0"
ffmpegio = "^0.8.3"
ffmpeg-python = "^0.2.0"
scipy = "^1.10.1"
pyttsx3 = "^2.90"
colorlog = "^6.7.0"
opencv-python = "^4.7.0.72"
moviepy = "^1.0.3"
torchvision = "^0.15.2"
facenet-pytorch = "^2.5.3"
stanza = "^1.5.0"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
